<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <com.rey.material.widget.EditText
        style="@style/Material.Widget.EditText.Light"
        android:id="@+id/textfield_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        app:et_labelTextSize="16dp"
        app:et_supportTextSize="13dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@android:color/black"
        app:et_inputId="@+id/textfield_email_login_2"
        app:et_supportMode="helper"
        app:et_supportTextErrorColor="@color/red"
        app:et_helper="@string/enter_email"
        app:et_dividerErrorColor="@color/red"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="5dp" />

    <com.rey.material.widget.EditText
        style="@style/Material.Widget.EditText.Light"
        android:id="@+id/textfield_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:inputType="textPassword"
        app:et_labelTextSize="16dp"
        app:et_supportTextSize="13dp"
        android:hint="@string/password"
        android:textColorHint="@android:color/black"
        app:et_inputId="@+id/textfield_password_2"
        app:et_supportMode="helper"
        app:et_supportTextErrorColor="@color/red"
        app:et_helper="@string/enter_password"
        app:et_dividerErrorColor="@color/red"
        android:layout_below="@+id/textfield_email_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="5dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textfield_password" />

    <com.rey.material.widget.Button
        android:id="@+id/loginButton"
        android:background="@color/azure"
        android:text="@string/login"
        app:rd_enable="true"
        style="@style/YourRippleDrawableStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
